tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_float32_4D_input_and_filter_tensors_options_inputLayout_nhwc_options_filterLayout_iohw.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float32 4D input and filter tensors options.inputLayout=nhwc options.filterLayout=iohw, coreml
 conv_transpose2d :: convTranspose2d float32 4D input and filter tensors options.inputLayout=nhwc options.filterLayout=iohw: index 1: actual=0.6479843 expected=0.054946538 ulp=29676206 tolerance=16384
  inputs: convTranspose2dInput: [0.05605664849281311, 0.7114229798316956, 0.6529743671417236, 0.38622909784317017, 0.3870837390422821, 0.9461629390716552, 0.09573192149400712, 0.9234652519226074, 0.636277973651886]; convTranspose2dFilter: [0.8614422678947449, 0.6267672777175903, 0.6366490125656128, 0.8382642269134521, 0.11884837597608566, 0.9921330213546752, 0.3285411298274994, 0.8742373585700989, 0.7205492258071899, 0.9801966547966005, 0.06169835478067398, 0.3220160901546478, 0.7498031854629517, 0.3930714726448059, 0.13811933994293213, 0.28385090827941895, 0.4235861301422119, 0.1448512077331543] (constant)
  expected convTranspose2dOutput: [0.048289567, 0.054946538, 0.6479843, 0.700793, 1.0440848, 0.70198804, 0.8621897, 0.26937708, 0.4157155, 0.21026826 ...] (len=50)
  actual convTranspose2dOutput: [0.048289567, 0.6479843, 0.37970436, 1.1785487, 0.42464647, 1.5086333, 0.20714079, 1.2503142, 0.031451873, 0.38708875 ...] (len=50)
  expected convTranspose2dOutput full nd:
[0.048289567, 0.054946538, 0.6479843, 0.700793, 1.0440848, 0.70198804, 0.8621897, 0.26937708, 0.4157155, 0.21026826, ...] (len=50, shape=[1, 5, 5, 2])
  actual convTranspose2dOutput full nd:
[0.048289567, 0.6479843, 0.37970436, 1.1785487, 0.42464647, 1.5086333, 0.20714079, 1.2503142, 0.031451873, 0.38708875, ...] (len=50, shape=[1, 5, 5, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f32[1, 3, 3, 1];
  }

  consts {
    operand_0: f32[1, 2, 3, 3] @bytes([123, 135, 92, 63, 210, 115, 32, 63, 110, 251, 34, 63, 124, 152, 86, 63, 199, 102, 243, 61, 110, 252, 125, 63, 139, 54, 168, 62, 5, 206, 95, 63, 234, 117, 56, 63, 43, 238, 122, 63, 106, 183, 124, 61, 75, 223, 164, 62, 26, 243, 63, 63, 170, 64, 201, 62, 40, 111, 13, 62, 232, 84, 145, 62, 72, 224, 216, 62, 224, 83, 20, 62]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[], filterLayout="iohw", groups=1, inputLayout="nhwc", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
