tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_options_padding_is_the_same_upper_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d options.padding is the same upper padding, coreml
 conv_transpose2d :: convTranspose2d options.padding is the same upper padding: index 24: actual=0 expected=1 ulp=1065353216 tolerance=16384
  inputs: convTranspose2dInput: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]; convTranspose2dFilter: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1] (constant)
  expected convTranspose2dOutput: [0.5, 0.5, 0.5, 0.5, 1, 1, 0.5, 0.5, 1, 1 ...] (len=72)
  actual convTranspose2dOutput: [0.5, 0.5, 0.5, 0.5, 1, 1, 0.5, 0.5, 1, 1 ...] (len=72)
  expected convTranspose2dOutput full nd:
[0.5, 0.5, 0.5, 0.5, 1, 1, 0.5, 0.5, 1, 1, ...] (len=72, shape=[1, 6, 6, 2])
  actual convTranspose2dOutput full nd:
[0.5, 0.5, 0.5, 0.5, 1, 1, 0.5, 0.5, 1, 1, ...] (len=72, shape=[1, 6, 6, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f32[1, 3, 3, 1];
  }

  consts {
    operand_0: f32[2, 3, 3, 1] @bytes([0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[1, 1], filterLayout="ohwi", groups=1, inputLayout="nhwc", label="", outputPadding=[], outputSizes=[6, 6], padding=[0, 1, 0, 1], strides=[2, 2]);
  }

  outputs { convTranspose2dOutput; }
}
